--- a/website/templates/index.html
+++ b/website/templates/index.html
@@ -123,7 +123,7 @@
                               <div class="btn-group">
                                   <button type="button" class="btn btn-sm btn-outline-secondary" data-bs-toggle="modal" data-bs-target="#myModal{{ property.id }}">Edit</button>
                                   <button type="button" class="btn btn-sm btn-outline-secondary" data-bs-toggle="modal" data-bs-target="#interestedPropertyModal">Interested</button>
-                                  <button type="button" class="btn btn-sm btn-outline-secondary" data-bs-toggle="modal" data-bs-target="#deletePropertyModal">Delete</button>
+                                  <button type="button" class="btn btn-sm btn-outline-secondary" data-bs-toggle="modal" data-bs-target="#delete{{ property.id }}">Delete</button>
                               </div>
                             {% if property.is_available %}
                                 <small class="text-body-secondary">Status: <span class="badge rounded-pill text-bg-success">Available</span></small>
@@ -140,7 +140,8 @@
       </div>
 
       <!-- Delete Property Modal-->
-      <div class="modal fade" tabindex="-1" role="dialog" id="deletePropertyModal">
+    {% for property in properties %}
+      <div class="modal fade" tabindex="-1" role="dialog" id="delete{{ property.id }}">
         <div class="modal-dialog" role="document" tabindex="-1">
           <div class="modal-content">
             <div class="modal-header">
@@ -152,16 +153,17 @@
               </p>
             </div>
             <div class="modal-footer">
-              <button type="button" class="btn btn-secondary" data-dismiss="modal">
+              <button type="button" class="btn btn-secondary" data-bs-dismiss="modal" aria-label="Close">
                 Cancel
               </button>
-              <button type="button" class="btn btn-danger">
+              <button type="button" onclick="window.location.href='{{ url_for('views.delete', id=property.id) }}';" class="btn btn-danger">
                 Delete
               </button>
             </div>
           </div>
         </div>
       </div>
+      {% endfor %}
 
       <!-- Interested Property Modal-->
       <div class="modal fade" tabindex="-1" role="dialog" id="interestedPropertyModal">
